[package]
name = "week3_ICP_Priject_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-macros = "0.8.4"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.2"
reqwest = "0.11.24"
serde = "1.0.196"
serde_json = "1.0.113"
